--- a/practice1_Hello-Sass/styles/scss/app.scss
+++ b/practice1_Hello-Sass/styles/scss/app.scss
@@ -1,5 +1,19 @@
 $greenColor: #22ff22;
 
-h1{
-    background-color: $greenColor;
+h1 {
+  background-color: $greenColor;
+}
+
+.container {
+  background-color: green;
+  ul {
+    list-style-type: none;
+    padding: 0;
+    li {
+      padding: 0.5rem;
+      a {
+        color: #fff;
+      }
+    }
+  }
 }
