--- a/practice1_Hello-Sass/styles/scss/app.scss
+++ b/practice1_Hello-Sass/styles/scss/app.scss
@@ -1,19 +1,22 @@
 $greenColor: #22ff22;
 
+@mixin box($color, $radius, $bgColor) {
+  background-color: $bgColor;
+  border-radius: $radius;
+  color: $color;
+  text-align: center;
+  font-size: 2rem;
+  padding: 1rem;
+}
+
 h1 {
   background-color: $greenColor;
 }
 
-.container {
-  background-color: green;
-  ul {
-    list-style-type: none;
-    padding: 0;
-    li {
-      padding: 0.5rem;
-      a {
-        color: #fff;
-      }
-    }
-  }
+h2 {
+  @include box(red, 1rem, $greenColor);
+}
+
+h3 {
+  @include box(white, 2rem, black);
 }
