--- a/practice1_Hello-Sass/styles/css/app.css
+++ b/practice1_Hello-Sass/styles/css/app.css
@@ -10,6 +10,12 @@ h2 {
   font-size: 2rem;
   padding: 1rem;
 }
+h2:hover {
+  background-color: rgb(243, 243, 62);
+  transition: background-color linear 150ms;
+  color: black;
+  cursor: pointer;
+}
 
 h3 {
   background-color: black;
@@ -18,6 +24,12 @@ h3 {
   text-align: center;
   font-size: 2rem;
   padding: 1rem;
+}
+h3:hover {
+  background-color: rgb(0, 179, 255);
+  transition: background-color linear 150ms;
+  color: black;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=app.css.map */
