--- a/practice1_Hello-Sass/styles/scss/_mixins.scss
+++ b/practice1_Hello-Sass/styles/scss/_mixins.scss
@@ -14,5 +14,10 @@
       color: black;
       cursor: pointer;
     }
+  }
 
+  @mixin query($width){
+    @media (max-width: $width) {
+      @content;
+    }
   }
