--- a/practice1_Hello-Sass/styles/css/app.css
+++ b/practice1_Hello-Sass/styles/css/app.css
@@ -69,4 +69,39 @@ h4.inheritence:hover {
   background-color: blueviolet;
 }
 
+.con-1 {
+  background-color: royalblue;
+  color: #fff;
+  padding: 5px;
+  height: 20px;
+}
+
+.con-2 {
+  background-color: royalblue;
+  color: #fff;
+  padding: 5px;
+  height: 40px;
+}
+
+.con-3 {
+  background-color: royalblue;
+  color: #fff;
+  padding: 5px;
+  height: 60px;
+}
+
+.con-4 {
+  background-color: royalblue;
+  color: #fff;
+  padding: 5px;
+  height: 80px;
+}
+
+.con-5 {
+  background-color: royalblue;
+  color: #fff;
+  padding: 5px;
+  height: 100px;
+}
+
 /*# sourceMappingURL=app.css.map */
