--- a/practice1_Hello-Sass/styles/css/app.css
+++ b/practice1_Hello-Sass/styles/css/app.css
@@ -69,6 +69,13 @@ h4.inheritence:hover {
   background-color: blueviolet;
 }
 
+.con-0 {
+  background-color: royalblue;
+  color: #fff;
+  padding: 5px;
+  height: 0px;
+}
+
 .con-1 {
   background-color: royalblue;
   color: #fff;
