--- a/practice2_project/styles/scss/style.scss
+++ b/practice2_project/styles/scss/style.scss
@@ -11,6 +11,7 @@ html {
 
 body {
   font-size: 1.6rem;
+  background-color: $bgColor;
 }
 
 header {
@@ -24,7 +25,7 @@ header {
   display: flex;
   align-items: center;
   .header-left__text {
-    @include textStyles(3rem, bold, white);
+    @include textStyles(3rem, bold, $secondaryColor);
   }
 }
 
@@ -47,7 +48,7 @@ header {
     &:hover {
       color: $textColor;
     }
-    @include textStyles(2rem, 100, white);
+    @include textStyles(2rem, 100, $secondaryColor);
   }
 }
 
@@ -56,11 +57,107 @@ header {
   flex-direction: column;
   gap: 4px 0;
   cursor: pointer;
+  display: none;
   span {
-    width: 25px;
-    height: 3px;
-    background-color: white;
-    border-radius: 3px;
+    width: 2.5rem;
+    height: 0.3rem;
+    background-color: $secondaryColor;
+    border-radius: 0.3rem;
+  }
+}
+
+main {
+  padding-top: 4rem;
+  .main-top-container {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 4rem;
+  }
+}
+
+.main-left {
+  padding: 4.5rem 2.5rem;
+  background-color: $secondaryColor;
+  display: flex;
+  flex-direction: column;
+  gap: 4.5rem 0;
+  width: 25%;
+  border-radius: 1rem;
+  @include boxShadow;
+  .main-left__item {
+    background-color: $primaryColor;
+    width: 100%;
+    text-align: center;
+    padding: 6rem 0;
+    text-decoration: none;
+    border-radius: 1rem;
+    @include textStyles(2.5rem, 100, $secondaryColor);
+    @include boxShadow;
+  }
+}
+
+.main-right {
+  background-color: $secondaryColor;
+  padding: 15rem 0;
+  width: 75%;
+  margin-left: 3rem;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 4rem 0;
+  align-items: center;
+  @include boxShadow;
+  .main-right__image {
+    width: 25rem;
+    border-radius: 1rem;
+    @include boxShadow;
+  }
+
+  .main-right__title {
+    @include textStyles(8rem, bold, $primaryColor);
+  }
+
+  .main-right__description {
+    font-size: 4rem;
+  }
+}
+
+@include media(L) {
+  main {
+    padding-top: 4rem;
+    .container {
+      flex-direction: column-reverse;
+    }
+  }
+
+  .main-left {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+    width: 100%;
+    .main-left__item {
+      padding: 2rem 1rem;
+      font-size: 2rem;
+    }
+  }
+
+  .main-right{
+    margin: 0 0 2rem 0;
+    width: 100%;
+    padding: 2rem;
+    text-align: center;
+
+    .main-right__image{
+      width: 20rem;
+    }
+
+    .main-right__title{
+      @include textStyles(5rem,bold,$primaryColor)
+    }
+
+    .main-right__description{
+      font-size: 2.5rem;
+    }
   }
 }
 
@@ -72,10 +169,13 @@ header {
   .header-right__icon {
     display: none;
   }
+
+
 }
 
-@include media(L) {
-  .hamburger-menu {
-    display: none;
+@include media(S) {
+  .main-left {
+    display: flex;
+    flex-direction: column;
   }
 }
