--- a/practice2_project/styles/scss/_mixins.scss
+++ b/practice2_project/styles/scss/_mixins.scss
@@ -28,7 +28,7 @@
 }
 
 @mixin boxShadow {
-  -webkit-box-shadow: 2px 2px 8px 4px rgba(0,0,0,0.1);
-  -moz-box-shadow: 2px 2px 8px 4px rgba(0,0,0,0.1);
-  box-shadow: 2px 2px 8px 4px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 2px 2px 8px 4px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 2px 2px 8px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 2px 8px 4px rgba(0, 0, 0, 0.1);
 }
