--- a/practice2_project/styles/scss/style.scss
+++ b/practice2_project/styles/scss/style.scss
@@ -153,6 +153,34 @@ main {
   }
 }
 
+footer {
+  background-color: $primaryColor;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 10rem;
+  padding: 4rem;
+  .footer__summary {
+    text-align: justify;
+    @include textStyles(2rem, 100, $secondaryColor);
+  }
+
+  .footer__links {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .footer__link-item {
+    list-style: none;
+  }
+
+  .footer__link {
+    font-weight: bold;
+    text-decoration: none;
+    @include textStyles(2rem, bold, $secondaryColor);
+  }
+}
+
 //! Responsive
 
 @include media(L) {
